<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.example.mobdevlab4.InputFragment" />

        <variable
            name="adapter"
            type="com.example.mobdevlab4.InputAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:adapter="@{adapter}"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/input_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="?attr/colorText"
            app:layout_constraintBottom_toTopOf="@id/button1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:background="#00FFFFFF"
                android:hint="@string/input_name"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/blue"
            android:onClick="@{() -> fragment.updateMember(input.getText().toString())}"
            android:text="@string/edit_member"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@id/button2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/blue"
            android:onClick="@{() -> fragment.addMember(input.getText().toString())}"
            android:text="@string/add_member"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@id/button3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/blue"
            android:onClick="@{() -> fragment.raffle()}"
            android:text="@string/raffle"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@id/button4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/blue"
            android:onClick="@{() -> fragment.deleteMember()}"
            android:text="@string/delete_member"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>